--- a/app/src/main/res/layout/testing_github.xml
+++ b/app/src/main/res/layout/testing_github.xml
@@ -19,4 +19,12 @@
         android:text="Steven"
         tools:layout_editor_absoluteX="184dp"
         tools:layout_editor_absoluteY="172dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Matvii"
+        tools:layout_editor_absoluteX="186dp"
+        tools:layout_editor_absoluteY="212dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
