--- a/app/src/main/res/layout/testing_github.xml
+++ b/app/src/main/res/layout/testing_github.xml
@@ -20,4 +20,12 @@
         tools:layout_editor_absoluteX="184dp"
         tools:layout_editor_absoluteY="172dp" />
 
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="175dp"
+        tools:layout_editor_absoluteY="246dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
