Made Registration form for both student and tutor

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -51,6 +51,7 @@
         android:backgroundTint="#FFFFFF"
         android:padding="12dp"
         android:text="@string/btnLogin"
+        android:textSize="16sp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/inputPassword"
         app:layout_constraintStart_toStartOf="@+id/inputPassword"
@@ -70,7 +71,7 @@
         app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
 
     <TextView
-        android:id="@+id/tvCreateStudent"
+        android:id="@+id/tvSignUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -90,10 +91,10 @@
         android:text="@string/tvGreetings2"
         android:textColor="#FFFEFE"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvCreateStudent"
+        app:layout_constraintEnd_toEndOf="@+id/tvSignUp"
         app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="@+id/tvCreateStudent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCreateStudent" />
+        app:layout_constraintStart_toStartOf="@+id/tvSignUp"
+        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />
 
     <TextView
         android:id="@+id/tvDontHaveAcc"
