--- a/app/src/main/res/layout/activity_signup_tutor.xml
+++ b/app/src/main/res/layout/activity_signup_tutor.xml
@@ -69,6 +69,7 @@
         android:backgroundTint="#FFFFFF"
         android:padding="12dp"
         android:text="@string/btnSignUp"
+        android:textSize="16sp"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/inputPassword"
         app:layout_constraintStart_toStartOf="@+id/inputPassword"
