--- a/app/src/main/res/layout/activity_profile_screen.xml
+++ b/app/src/main/res/layout/activity_profile_screen.xml
@@ -25,14 +25,14 @@
                 android:src="@android:drawable/ic_menu_gallery" />
 
             <EditText
-                android:id="@+id/editName"
+                android:id="@+id/nameRegisterInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name"
                 android:layout_marginTop="16dp"/>
 
             <EditText
-                android:id="@+id/editEmail"
+                android:id="@+id/emailLoginInput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Email"
