--- a/app/src/main/res/layout/activity_reset_tutor_password.xml
+++ b/app/src/main/res/layout/activity_reset_tutor_password.xml
@@ -12,28 +12,28 @@
         android:id="@+id/inputOldPassword"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="80dp"
         android:background="@drawable/rounded_corner"
         android:ems="10"
-        android:hint="@string/Username"
-        android:inputType="text"
+        android:hint="@string/inputOldPassword"
+        android:inputType="textPassword"
         android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="#FFFEFE"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvEnterNewPassword" />
+        app:layout_constraintEnd_toEndOf="@+id/tvChangePassword"
+        app:layout_constraintHorizontal_bias="0.521"
+        app:layout_constraintStart_toStartOf="@+id/tvChangePassword"
+        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />
 
     <EditText
         android:id="@+id/inputNewPassword"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="36dp"
         android:background="@drawable/rounded_corner"
         android:ems="10"
-        android:hint="@string/Password"
+        android:hint="@string/inputNewPassword"
         android:inputType="textPassword"
         android:padding="12dp"
         android:textColor="@color/white"
@@ -50,80 +50,67 @@
         android:layout_marginTop="16dp"
         android:background="@drawable/rounded_corner"
         android:ems="10"
-        android:hint="@string/inpConfirmPassword"
+        android:hint="@string/inputConfirmNewPassword"
         android:inputType="textPassword"
         android:padding="12dp"
         android:textColor="@color/white"
         android:textColorHint="#FFFEFE"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/inputNewPassword"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/inputNewPassword"
         app:layout_constraintTop_toBottomOf="@+id/inputNewPassword" />
 
+    <TextView
+        android:id="@+id/tvForgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="@string/ForgotPassword"
+        android:textColor="@color/white"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/inputConfirmPassword"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />
+
     <Button
-        android:id="@+id/btn_SignUpStudent"
+        android:id="@+id/btnConfirm"
         android:layout_width="270dp"
         android:layout_height="60dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="100dp"
         android:backgroundTint="#FFFFFF"
         android:padding="12dp"
-        android:text="@string/btnSignUp"
+        android:text="@string/btnConfirm"
         android:textColor="@color/black"
         android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/inputNewPassword"
-        app:layout_constraintStart_toStartOf="@+id/inputNewPassword"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />
 
     <TextView
-        android:id="@+id/tvSignUp"
+        android:id="@+id/tvChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:text="@string/tvCreateStudent"
+        android:text="@string/ChangePassword"
         android:textColor="#FDFDFD"
-        android:textSize="34sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvEnterNewPassword"
+        android:id="@+id/tvBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/tvNewAccount"
-        android:textColor="#FFFEFE"
-        android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvSignUp"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="@+id/tvSignUp"
-        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />
-
-    <TextView
-        android:id="@+id/tvDontHaveAcc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:text="@string/HaveAcc"
-        android:textColor="#040404"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_SignUpStudent"
-        app:layout_constraintVertical_bias="0.746" />
-
-    <TextView
-        android:id="@+id/tvLogInNow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:text="@string/LogInNow"
+        android:layout_marginTop="60dp"
+        android:text="@string/tvBack"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/tvDontHaveAcc"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAcc"
-        app:layout_constraintTop_toTopOf="@+id/tvDontHaveAcc"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/btnConfirm"
+        app:layout_constraintStart_toStartOf="@+id/btnConfirm"
+        app:layout_constraintTop_toBottomOf="@+id/btnConfirm" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
