--- a/app/src/main/res/layout/activity_signup_tutor.xml
+++ b/app/src/main/res/layout/activity_signup_tutor.xml
@@ -9,7 +9,7 @@
     tools:context=".LoginActivity">
 
     <EditText
-        android:id="@+id/inputUsername"
+        android:id="@+id/inputOldPassword"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="48dp"
@@ -24,10 +24,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvNewAccount" />
+        app:layout_constraintTop_toBottomOf="@+id/tvEnterNewPassword" />
 
     <EditText
-        android:id="@+id/inputPassword"
+        android:id="@+id/inputNewPassword"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="16dp"
@@ -39,9 +39,9 @@
         android:textColor="@color/white"
         android:textColorHint="#FFFEFE"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/inputUsername"
-        app:layout_constraintStart_toStartOf="@+id/inputUsername"
-        app:layout_constraintTop_toBottomOf="@+id/inputUsername" />
+        app:layout_constraintEnd_toEndOf="@+id/inputOldPassword"
+        app:layout_constraintStart_toStartOf="@+id/inputOldPassword"
+        app:layout_constraintTop_toBottomOf="@+id/inputOldPassword" />
 
     <EditText
         android:id="@+id/inputConfirmPassword"
@@ -59,10 +59,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inputPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/inputNewPassword" />
 
     <Button
-        android:id="@+id/btn_SignUpTutor"
+        android:id="@+id/btnConfirm"
         android:layout_width="270dp"
         android:layout_height="60dp"
         android:layout_marginTop="40dp"
@@ -71,12 +71,12 @@
         android:text="@string/btnSignUp"
         android:textSize="16sp"
         android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="@+id/inputPassword"
-        app:layout_constraintStart_toStartOf="@+id/inputPassword"
+        app:layout_constraintEnd_toEndOf="@+id/inputNewPassword"
+        app:layout_constraintStart_toStartOf="@+id/inputNewPassword"
         app:layout_constraintTop_toBottomOf="@+id/inputConfirmPassword" />
 
     <TextView
-        android:id="@+id/tvCreateTutor"
+        android:id="@+id/tvChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvNewAccount"
+        android:id="@+id/tvEnterNewPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -97,9 +97,9 @@
         android:text="@string/tvNewAccount"
         android:textColor="#FFFEFE"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvCreateTutor"
+        app:layout_constraintEnd_toEndOf="@+id/tvChangePassword"
         app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintTop_toBottomOf="@+id/tvCreateTutor" />
+        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />
 
     <TextView
         android:id="@+id/tvDontHaveAcc"
@@ -110,7 +110,7 @@
         android:textColor="#040404"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_SignUpTutor"
+        app:layout_constraintTop_toBottomOf="@+id/btnConfirm"
         app:layout_constraintVertical_bias="0.746" />
 
     <TextView
