--- a/app/src/main/res/layout/activity_student_profile.xml
+++ b/app/src/main/res/layout/activity_student_profile.xml
@@ -363,7 +363,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/textView18"
+                            android:id="@+id/tvChangePass"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
