--- a/app/src/main/res/layout/activity_edit_student_profile.xml
+++ b/app/src/main/res/layout/activity_edit_student_profile.xml
@@ -9,11 +9,11 @@
     tools:context=".LoginActivity">
 
     <TextView
-        android:id="@+id/tvSignUp"
+        android:id="@+id/tvEditStudentProfile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="@string/tvSignUpHeader"
+        android:text="@string/tvEditTutorProfile"
         android:textColor="#FDFDFD"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -23,23 +23,24 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tvStudent"
+        android:id="@+id/tvStudentID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="@string/Student"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
+        android:text="300444333"
         android:textColor="#FFFEFE"
         android:textSize="30sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvSignUp"
-        app:layout_constraintHorizontal_bias="0.507"
-        app:layout_constraintStart_toStartOf="@+id/tvSignUp"
-        app:layout_constraintTop_toBottomOf="@+id/tvSignUp" />
+        app:layout_constraintEnd_toEndOf="@+id/tvEditStudentProfile"
+        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintStart_toStartOf="@+id/tvEditStudentProfile"
+        app:layout_constraintTop_toBottomOf="@+id/tvEditStudentProfile" />
 
     <EditText
         android:id="@+id/inputFirstName"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/rounded_corner"
         android:ems="10"
         android:hint="@string/inputFirstName"
@@ -48,9 +49,10 @@
         android:textColor="@color/white"
         android:textColorHint="#FFFEFE"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/tvStudent"
-        app:layout_constraintStart_toStartOf="@+id/tvStudent"
-        app:layout_constraintTop_toBottomOf="@+id/tvStudent" />
+        app:layout_constraintEnd_toEndOf="@+id/tvStudentID"
+        app:layout_constraintHorizontal_bias="0.489"
+        app:layout_constraintStart_toStartOf="@+id/tvStudentID"
+        app:layout_constraintTop_toBottomOf="@+id/tvStudentID" />
 
     <EditText
         android:id="@+id/inputLastName"
@@ -104,7 +106,7 @@
         app:layout_constraintTop_toBottomOf="@+id/inputPhone" />
 
     <EditText
-        android:id="@+id/inputInstitution"
+        android:id="@+id/inputProgram"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
@@ -125,6 +127,7 @@
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
+        android:background="@drawable/rounded_corner"
         android:ems="10"
         android:hint="@string/inputAvatar"
         android:inputType="textUri"
@@ -132,21 +135,20 @@
         android:textColor="@color/white"
         android:textColorHint="#FFFEFE"
         android:textSize="18sp"
-        android:background="@drawable/rounded_corner"
-        app:layout_constraintEnd_toEndOf="@+id/inputInstitution"
-        app:layout_constraintStart_toStartOf="@+id/inputInstitution"
-        app:layout_constraintTop_toBottomOf="@+id/inputInstitution" />
+        app:layout_constraintEnd_toEndOf="@+id/inputProgram"
+        app:layout_constraintStart_toStartOf="@+id/inputProgram"
+        app:layout_constraintTop_toBottomOf="@+id/inputProgram" />
 
     <Button
-        android:id="@+id/btnRegister"
+        android:id="@+id/btnConfirmEditProfile"
         android:layout_width="270dp"
         android:layout_height="60dp"
         android:layout_marginTop="100dp"
         android:backgroundTint="@color/white"
         android:padding="12dp"
-        android:text="@string/btnRegister"
-        android:textSize="16sp"
+        android:text="@string/btnConfirmEditProfile"
         android:textColor="@color/black"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/inputAvatarURL"
         app:layout_constraintStart_toStartOf="@+id/inputAvatarURL"
         app:layout_constraintTop_toBottomOf="@+id/inputAvatarURL" />
@@ -158,7 +160,7 @@
         android:layout_marginTop="24dp"
         android:text="@string/tvBack"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="@+id/btnRegister"
-        app:layout_constraintStart_toStartOf="@+id/btnRegister"
-        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />
+        app:layout_constraintEnd_toEndOf="@+id/btnConfirmEditProfile"
+        app:layout_constraintStart_toStartOf="@+id/btnConfirmEditProfile"
+        app:layout_constraintTop_toBottomOf="@+id/btnConfirmEditProfile" />
 </androidx.constraintlayout.widget.ConstraintLayout>
