--- a/app/src/main/res/layout/activity_student_profile.xml
+++ b/app/src/main/res/layout/activity_student_profile.xml
@@ -163,7 +163,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:text="@string/FirstName"
+                            android:text="@string/Name"
                             android:textColor="#45719B"
                             android:textSize="18sp" />
 
@@ -180,45 +180,6 @@
 
                     <View
                         android:id="@+id/view3"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginBottom="6dp"
-                        android:background="#45719B" />
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="20dp"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginEnd="20dp"
-                        android:layout_marginBottom="10dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/textView9"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="@string/LastName"
-                            android:textColor="#45719B"
-                            android:textSize="18sp" />
-
-                        <TextView
-                            android:id="@+id/textView10"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Smith"
-                            android:textAlignment="textEnd"
-                            android:textColor="#615555"
-                            android:textSize="16sp" />
-                    </LinearLayout>
-
-                    <View
-                        android:id="@+id/view5"
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_marginStart="20dp"
