--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,35 +5,42 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login_background"
     android:padding="24dp"
     tools:context=".ForgotPasswordActivity">
 
     <EditText
         android:id="@+id/emailForgotInput"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="52dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="256dp"
+        android:background="@drawable/rounded_corner"
+        android:ems="10"
         android:hint="@string/forgot_pass_hint"
         android:importantForAutofill="no"
-        android:inputType="textEmailAddress"
+        android:inputType="text|textEmailAddress"
         android:minHeight="48dp"
-        android:textColorHint="#546E7A"
+        android:padding="12dp"
+        android:textColor="@color/white"
+        android:textColorHint="#FFFEFE"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="VisualLintTextFieldSize" />
 
     <Button
         android:id="@+id/recoverButton"
-        android:layout_width="363dp"
-        android:layout_height="wrap_content"
+        android:layout_width="270dp"
+        android:layout_height="60dp"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#FFFFFF"
+        android:padding="12dp"
         android:text="@string/recover_pass_btn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="@+id/emailForgotInput"
+        app:layout_constraintStart_toStartOf="@+id/emailForgotInput"
         app:layout_constraintTop_toBottomOf="@+id/emailForgotInput"
         tools:ignore="VisualLintButtonSize" />
 
