--- a/app/src/main/res/layout/activity_reset_tutor_password.xml
+++ b/app/src/main/res/layout/activity_reset_tutor_password.xml
@@ -9,7 +9,7 @@
     tools:context=".LoginActivity">
 
     <EditText
-        android:id="@+id/inputOldPassword"
+        android:id="@+id/emailLoginInput"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="80dp"
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />
 
     <EditText
-        android:id="@+id/inputNewPassword"
+        android:id="@+id/passwordLoginInput"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_marginTop="36dp"
@@ -39,9 +39,9 @@
         android:textColor="@color/white"
         android:textColorHint="#FFFEFE"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/inputOldPassword"
-        app:layout_constraintStart_toStartOf="@+id/inputOldPassword"
-        app:layout_constraintTop_toBottomOf="@+id/inputOldPassword" />
+        app:layout_constraintEnd_toEndOf="@+id/emailLoginInput"
+        app:layout_constraintStart_toStartOf="@+id/emailLoginInput"
+        app:layout_constraintTop_toBottomOf="@+id/emailLoginInput" />
 
     <EditText
         android:id="@+id/inputConfirmPassword"
@@ -56,13 +56,13 @@
         android:textColor="@color/white"
         android:textColorHint="#FFFEFE"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="@+id/inputNewPassword"
+        app:layout_constraintEnd_toEndOf="@+id/passwordLoginInput"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="@+id/inputNewPassword"
-        app:layout_constraintTop_toBottomOf="@+id/inputNewPassword" />
+        app:layout_constraintStart_toStartOf="@+id/passwordLoginInput"
+        app:layout_constraintTop_toBottomOf="@+id/passwordLoginInput" />
 
     <TextView
-        android:id="@+id/tvForgotPassword"
+        android:id="@+id/tvForgotPasswordLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
